chore: add grayscaled leaflet button